# swdb

./: .gitignore  404.html  ARCHITECTURE.md  CLAUDE.md  README.md  Star Wars EU.xlsx  index.html  justfile  pyproject.toml
assets/: index-BMuLKcQZ.css  index-C97le-hQ.js  index-CAhvz6Hd.js  index-CKX6dlgh.js  index-Cn8N9rJH.js  index-DBJ55nLt.js  index-DJB2icVC.css  index-DM-1UVhT.js  index-DMkHQUln.css  index-DTlTIQ2F.js  index-DswuiPuu.css  index-ZVbwoByH.css  index-j7c-mLc0.js
data/: works.json
docs/plans/: 2026-04-29-star-wars-eu-catalog-plan.md
docs/specs/: 2026-04-29-star-wars-eu-catalog-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: works.json
frontend/src/: App.tsx
frontend/src/components/filters/: ActiveFilterChips.tsx  AuthorFilter.tsx  EraFilter.tsx  MediumFilter.tsx  (+5 more)
frontend/src/constants/: decades.ts  eras.ts  mediums.ts
frontend/src/lib/: filterWorks.ts  formatReleaseDate.ts  formatSeriesAndNumber.ts  formatYear.ts  slug.ts  timelineGroups.ts  urlState.ts
frontend/src/store/: catalogStore.ts  filterStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: work.ts
scripts/: build_data.py  excel_colors.py  excel_reader.py  excel_writer.py  id_utils.py  infobox_parser.py  release_utils.py  wiki_client.py  year_utils.py
tests/: test_build_data.py  test_excel_colors.py  test_excel_reader.py  test_excel_writer.py  test_id_utils.py  test_infobox_parser.py  test_release_utils.py  test_wiki_client.py  test_year_utils.py
tests/fixtures/: infobox_a_new_hope.html
(+21 files in other folders)
