[project]
name = "swdb-pipeline"
version = "0.1.0"
description = "Star Wars EU catalog build pipeline"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
